Revision history for namespace-autoclean

{{$NEXT}}

0.25      2015-06-03 01:09:06Z
  - load Moo::Role earlier in a test, to make a potential misconfiguration
    more visible

0.24      2015-01-03 20:44:36Z
  - re-release to fix problematic $VERSION declaration (RT#101095)

0.23      2014-12-27 04:07:03Z
  - be more lenient in optional Mouse tests to handle edge cases in older and
    pure perl versions

0.22      2014-11-04 06:19:54Z
  - fix an erroneous change in 0.21

0.21      2014-11-04 05:24:36Z
  - drop testing of MooseX::MarkAsMethods, now that Moose 2.1400 has better
    overload handling

0.20      2014-09-06 23:04:12Z
  - Moose earlier than 2.0300 had a broken ->does method, which called methods
    on a class's meta when it might not be initialized (RT#98424)

0.19      2014-06-17 04:57:07Z
  - more comprehensive testing with Moo/Mouse/Moose
  - fixed cleaning of constants

0.18      2014-06-14 20:12:59Z
  - better method detection for Mouse (github #4, Graham Knop)

0.17      2014-06-10 20:13:14Z
  - Add -except to import options. This allows you to explicitly not clean a
    sub. (github #3, Dave Rolsky)

0.16      2014-05-27 04:50:22Z (TRIAL RELEASE)
  - Changed the code to no longer _require_ Class::MOP. If your class is not a
    Moose class then we don't load Class::MOP. This was particularly
    problematic for Moo classes. Using namespace::autoclean with a Moo class
    "upgraded" it to be a Moose class.
  - Using this module broke overloading in a class. Reported by Chris
    Weyl. (RT#50938)

0.15      2013-12-14 17:47:21Z
  - update configure_requires checking in Makefile.PL, add CONTRIBUTING file

0.14      2013-10-09 03:06:00Z
  - bump dependency on B::Hooks::EndOfScope, to get the separation of
    pure-perl and XS components (RT#89245)
  - repository migrated to the github moose organization

0.13      2011-08-24 09:33:00Z
  - Fix issue in dist.ini which was causing links to be incorrectly generated.